Add seed all data to Toolbox
Fixes: 367980914
Flag: NONE working on toolbox
Test: None
Change-Id: Ic7b5fdf244589e817cecb04bd929b15cbaf8ad5e

--- a/testapps/toolbox/res/layout/fragment_home.xml
+++ b/testapps/toolbox/res/layout/fragment_home.xml
@@ -80,6 +80,15 @@
             android:text="@string/seed_random_data" />
 
         <Button
+            android:id="@+id/seed_all_data_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:minWidth="250dp"
+            android:text="Seed All Data" />
+
+        <Button
             android:id="@+id/seed_performance_insert_data_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
