Update onboarding screen
New: https://screenshot.googleplex.com/AXaA8EGLPuYogEG.png
Old:https://screenshot.googleplex.com/3tSgFSP5vqwUkiX.png

Fix: 344884609
Test: atest
Flag: com.android.healthfitness.flags.personal_health_record
Change-Id: I4bb96841ff3486e36ee2e6e5d66ce9b78d5d3e5a

--- a/apk/res/layout/onboarding_screen_content.xml
+++ b/apk/res/layout/onboarding_screen_content.xml
@@ -53,6 +53,15 @@
             android:layout_marginBottom="@dimen/spacing_xlarge"
             android:scaleType="centerInside" />
 
+        <TextView
+            android:id="@+id/onboarding_description_with_health_connect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:text="@string/onboarding_description_with_health_connect"
+            android:textAppearance="?attr/textAppearanceLabel"
+            android:textColor="?android:attr/colorAccent"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
