Rename Immunizations to Vaccines, fix names, add toolbox data
Fix: 361022868
Test: atest
Flag: com.android.healthfitness.flags.personal_health_record
Change-Id: Ic7c0e4ef6a105f8bd01350c6e61592bb02538460

--- a/testapps/toolbox/res/values/donottranslate_strings.xml
+++ b/testapps/toolbox/res/values/donottranslate_strings.xml
@@ -144,8 +144,8 @@
   <string name="phr_options_ingest_title">Ingest PHR data</string>
   <string name="phr_options_create_data_source">Create data source</string>
   <string name="phr_options_data_source_id_placeholder">Create data source to see the id</string>
-  <string name="phr_options_insert_immunization">Insert immunization</string>
-  <string name="phr_options_immunization_id_placeholder">Insert immunization to see the id</string>
+  <string name="phr_options_insert_immunization">Insert vaccines</string>
+  <string name="phr_options_immunization_id_placeholder">Insert vaccines to see the id</string>
   <string name="phr_options_insert_allergy">Insert allergy</string>
   <string name="phr_options_allergy_id_placeholder">Insert allergy to see the id</string>
   <string name="phr_options_read_by_id">Read FHIR Resource For Id</string>
