Additional permissions screen for apps with medical permissions.
Filters out invalid additional permissions in the
HealthPermissionReader.

READ_HEALTH_DATA_HISTORY is invalid if no data type read permissions are
declared.
READ_HEALTH_DATA_IN_BACKGROUND is invalid if no health read
permissions are declared.

Removes usages of FeatureUtils for the personalHealthRecord flag.

Fix: 366410386
Test: atest
Flag: com.android.healthfitness.flags.personal_health_record
Change-Id: Id5ef09a30ca7e6e1c52fc69d9c4406cfc47b87d8

--- a/apk/res/navigation/combined_permissions_nav_graph.xml
+++ b/apk/res/navigation/combined_permissions_nav_graph.xml
@@ -50,5 +50,8 @@
         <argument
             android:name="android.intent.extra.PACKAGE_NAME"
             app:argType="string" />
+        <action
+            android:id="@+id/action_additionalAccess_to_medicalApp"
+            app:destination="@id/medical_app_nav_graph" />
     </fragment>
 </navigation>
