Improved request permissions flow.
Introduces new fragment when an app requests only the WRITE medical permission.
Also adds new button to toolbox for requesting only the WRITE medical
permission for testing.

Bug: 366410386
Test: atest
Flag: com.android.healthfitness.flags.personal_health_record
Change-Id: I673dcd91c88862a08bf6817be66710ea6aa275d4

--- a/testapps/toolbox/res/layout/fragment_home.xml
+++ b/testapps/toolbox/res/layout/fragment_home.xml
@@ -152,6 +152,24 @@
             android:text="@string/request_history_read_permission" />
 
         <Button
+            android:id="@+id/request_medical_write_permission"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:minWidth="250dp"
+            android:text="@string/request_medical_write" />
+
+        <Button
+            android:id="@+id/request_medical_write_and_other_health_permissions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:minWidth="250dp"
+            android:text="@string/request_medical_write_and_other_health_permissions" />
+
+        <Button
             android:id="@+id/read_data_in_background_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
