--- a/apk/res/layout/widget_request_permission_header.xml
+++ b/apk/res/layout/widget_request_permission_header.xml
@@ -47,7 +47,7 @@
         style="?attr/textAppearanceSummaryLarge"/>
 
     <TextView
-        android:id="@+id/history_access"
+        android:id="@+id/access_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawablePadding="@dimen/spacing_normal"
