Changes request permissions text based on which type of permissions are requested (read/write/medical/fitness/additional).
Fix: 370919225
Fix: 370919512
Test: atest
Flag: com.android.healthfitness.flags.personal_health_record
Change-Id: I5faaaa2e0254cfb0a327ecb59c98dec2e2ed257a

--- a/apk/res/xml/additional_permissions_screen.xml
+++ b/apk/res/xml/additional_permissions_screen.xml
@@ -15,9 +15,12 @@
   -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <com.android.healthconnect.controller.permissions.request.AdditionalPermissionHeaderPreference
-        android:key="request_additional_permissions_header"/>
+    <com.android.healthconnect.controller.permissions.request.RequestPermissionHeaderPreference
+        android:key="request_permissions_header"/>
     <PreferenceCategory
         android:key="additional_permissions_category"
+        app:isPreferenceVisible="false"/>
+    <com.android.settingslib.widget.FooterPreference
+        android:key="request_permissions_footer"
         app:isPreferenceVisible="false"/>
 </PreferenceScreen>
