--- a/testapps/toolbox/res/values/donottranslate_strings.xml
+++ b/testapps/toolbox/res/values/donottranslate_strings.xml
@@ -46,6 +46,9 @@
   <string name="request_history_read_permission">Request History Read</string>
   <string name="request_medical_write">Request Medical Write</string>
   <string name="request_medical_write_and_other_health_permissions">Request Medical Write + Other Health</string>
+  <string name="request_medical_read">Request Medical Read</string>
+  <string name="request_fitness_read">Request Fitness Read</string>
+  <string name="request_fitness_write">Request Fitness Write</string>
   <string name="toast_permission_filter_enabled">Intent Filter Enabled</string>
   <string name="toast_permission_filter_disabled">Intent Filter Disabled</string>
   <string name="toast_seed_data_success">Data inserted successfully</string>
