--- a/apk/res/xml/home_preference_screen.xml
+++ b/apk/res/xml/home_preference_screen.xml
@@ -42,6 +42,7 @@
         <com.android.healthconnect.controller.shared.preference.HealthPreference
             android:key="medical_data"
             android:icon="?attr/dataAndAccessIcon"
-            android:title="@string/browse_medical_data"/>
+            android:title="@string/browse_medical_data"
+            android:description="@string/browse_medical_data_subtitle"/>
     </PreferenceCategory>
 </PreferenceScreen>
