Fix footer on empty App data screen
Change-Id: I4de7aac6853780293d7d6d655777809b94d3db85
Fix: 372361653
Test: atest
Flag: com.android.healthfitness.flags.new_information_architecture

--- a/apk/res/xml/all_data_screen.xml
+++ b/apk/res/xml/all_data_screen.xml
@@ -27,7 +27,7 @@
         app:isPreferenceVisible="false"/>
     <com.android.settingslib.widget.FooterPreference
         android:key="key_footer"
-        android:title="@string/no_data_footer"
+        android:title="@string/all_data_no_data_footer"
         app:isPreferenceVisible="false"/>
 
 </PreferenceScreen>
