Fix Browse health records summary
Change-Id: Ib51ba82aef0cd78db5e0fe2862dd3af9759ad593
Fix: 370727444
Test: atest
Flag: com.android.healthfitness.flags.personal_health_record

--- a/apk/res/xml/home_preference_screen.xml
+++ b/apk/res/xml/home_preference_screen.xml
@@ -43,6 +43,6 @@
             android:key="medical_data"
             android:icon="?attr/dataAndAccessIcon"
             android:title="@string/browse_medical_data"
-            android:description="@string/browse_medical_data_subtitle"/>
+            android:summary="@string/browse_medical_data_subtitle"/>
     </PreferenceCategory>
 </PreferenceScreen>
