--- a/apk/res/drawable/tab_background_unselected_disabled.xml
+++ b/apk/res/drawable/tab_background_unselected_disabled.xml
@@ -21,7 +21,6 @@
     android:insetRight="@dimen/spacing_small" >
     <shape android:shape="rectangle">
         <corners android:radius="@dimen/tab_corner_radius" />
-        <solid android:color="@color/settingslib_background_device_default_dark"
-            android:alpha="0.2"/>
+        <solid android:color="@color/settingslib_switch_thumb_color"/>
     </shape>
 </inset>
