--- a/testapps/toolbox/res/layout/fragment_phr_options.xml
+++ b/testapps/toolbox/res/layout/fragment_phr_options.xml
@@ -34,7 +34,6 @@
             android:minWidth="250dp"
             android:text="@string/phr_options_request_medical" />
 
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,8 +42,6 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:text="@string/phr_options_ingest_title" />
-
-
 
         <Button
             android:id="@+id/phr_create_data_source_button"
@@ -61,7 +58,15 @@
             android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@string/phr_options_data_source_id_placeholder"
+            android:visibility="gone"
             android:textSize="12sp" />
+
+        <Spinner
+            android:id="@+id/phr_spinner"
+            android:layout_marginTop="18dp"
+            android:minWidth="250dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/phr_seed_fhir_jsons_button"
@@ -91,7 +96,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/phr_options_title"
+            android:text="@string/phr_options_read_immunization"
             android:layout_marginTop="50dp"
             android:textSize="20sp"
             android:textStyle="bold" />
