--- a/testapps/toolbox/res/values/donottranslate_strings.xml
+++ b/testapps/toolbox/res/values/donottranslate_strings.xml
@@ -142,19 +142,18 @@
   <!--endregion-->
 
   <!-- region Phr Options screen -->
-  <string name="phr_options_title">PHR Options</string>
-  <string name="phr_options_ingest_title">Ingest PHR data</string>
+  <string name="phr_options_read_immunization">Read PHR data</string>
+  <string name="phr_options_ingest_title">Insert PHR data</string>
   <string name="phr_options_create_data_source">Create data source</string>
   <string name="phr_options_data_source_id_placeholder">Create data source to see the id</string>
-  <string name="phr_options_insert_immunization">Insert vaccines</string>
-  <string name="phr_options_immunization_id_placeholder">Insert vaccines to see the id</string>
-  <string name="phr_options_insert_allergy">Insert allergy</string>
-  <string name="phr_options_allergy_id_placeholder">Insert allergy to see the id</string>
-  <string name="phr_options_read_by_id">Read FHIR Resource For Id</string>
-  <string name="phr_options_seed_fhir_jsons">Seed FHIR JSONs</string>
+  <string name="phr_options_insert_immunization">Insert all vaccines</string>
+  <string name="phr_options_insert_allergy">Insert all allergies</string>
+  <string name="phr_options_read_by_id">Read all vaccines</string>
+  <string name="phr_options_seed_fhir_jsons">Seed all FHIR resources</string>
   <string name="phr_options_request_immunization">Request read immunization permission</string>
   <string name="phr_options_request_medical">Request all medical permissions</string>
   <string name="all_medical_permissions_success">All medical permissions were successfully granted</string>
   <string name="number_of_medical_permissions_not_granted">%1$d medical permissions still not granted</string>
+  <string name="spinner_default_message">SELECT FHIR RESOURCE TO INSERT</string>
   <!--endregion-->
 </resources>
