New IA fixes: - inactive apps refresh after deletion - do not show the success dialog twice
Fix: 374096989
Test: atest
Flag: com.android.healthfitness.flags.new_information_architecture
Change-Id: Ifffe8cfc6785a4c20a4a7624146fd667d68adb6e

--- a/apk/res/xml/access_screen.xml
+++ b/apk/res/xml/access_screen.xml
@@ -15,7 +15,10 @@
   limitations under the License.
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:key="access_screen">
+    <com.android.healthconnect.controller.shared.preference.NoDataPreference
+        app:isPreferenceVisible="false"/>
     <PreferenceCategory
         android:key="can_read">
     </PreferenceCategory>
