Lock screen banner
- The banner shows at most twice for devices without lock screen: 1) for the first time there is some non-medical data and 2) for the first time there is some medical data.
- The banner gets dismissed when clicking on the Set lock screen button
  or the dismiss button

https://drive.google.com/file/d/1ECRRkiwHTYkKtsIMPYAh4SBxrqclZI8l/view?usp=sharing&resourcekey=0-Y2bQuuH7HRxV2DXBwXK-6g

Bug: 375384825
Test: atest
Flag: com.android.healthfitness.flags.personal_health_record_lock_screen_banner
Change-Id: I22f2d05e480426416d1349302156bdfdf5f86420

--- a/apk/res/values/attrs.xml
+++ b/apk/res/values/attrs.xml
@@ -107,6 +107,9 @@
     <attr name="proceduresIcon" format="reference"/>
     <attr name="vitalsIcon" format="reference"/>
     <attr name="socialHistoryIcon" format="reference"/>
+
+    <!-- Lock screen banner -->
+    <attr name="lockIcon" format="reference" />
     <!-- END REGION -->
 
     <!-- REGION DIALOG GRAVITY -->
