--- a/apk/res/values/themes.xml
+++ b/apk/res/values/themes.xml
@@ -109,6 +109,10 @@
         <item name="vitalsIcon">@drawable/ic_medical_vital_signs</item>
         <item name="socialHistoryIcon">@drawable/ic_medical_social_history</item>
 
+        <!-- Lock screen banner -->
+        <item name="lockIcon">@drawable/ic_lock</item>
+
+
         <!-- END REGION -->
 
         <!-- REGION DIALOG GRAVITY -->
