Fixes for the new IA:
- add content description for maps when present in exercise session entries
- add dynamic content description to checkboxes
- update icons for cycle tracking and sleep
- update content description for date navigation

Fix: 341259319
Fix: 374028927
Fix: 374013223
Fix: 373280172
Fix: 373998621
Fix: 374009839
Fix: 374017739
Flag: com.android.healthfitness.flags.new_information_architecture
Test: atest
Change-Id: I08c4ca2fd9829ef51f23acfd4ae22b5cd81de525

--- a/apk/res/drawable/ic_category_sleep.xml
+++ b/apk/res/drawable/ic_category_sleep.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Copyright (C) 2022 The Android Open Source Project
+  Copyright (C) 2024 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -17,16 +17,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportHeight="24"
     android:viewportWidth="24"
+    android:viewportHeight="24"
     android:tint="?attr/colorControlNormal">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M10,8H4V10.0571H7L4,13.9429V16H10V13.9429H7L10,10.0571V8Z" />
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M18,3H12V5.0571H15L12,8.9429V11H18V8.9429H15L18,5.0571V3Z" />
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M20,13H14V15.0571H17L14,18.9429V21H20V18.9429H17L20,15.0571V13Z" />
+  <group>
+    <clip-path
+        android:pathData="M0,0h24v24h-24z"/>
+    <path
+        android:pathData="M12.075,22C10.675,22 9.358,21.733 8.125,21.2C6.908,20.667 5.842,19.95 4.925,19.05C4.025,18.133 3.308,17.067 2.775,15.85C2.242,14.617 1.975,13.3 1.975,11.9C1.975,9.467 2.75,7.325 4.3,5.475C5.85,3.608 7.825,2.45 10.225,2C9.925,3.65 10.017,5.267 10.5,6.85C10.983,8.417 11.817,9.792 13,10.975C14.183,12.158 15.558,12.992 17.125,13.475C18.708,13.958 20.325,14.05 21.975,13.75C21.542,16.15 20.392,18.125 18.525,19.675C16.658,21.225 14.508,22 12.075,22ZM12.075,20C13.542,20 14.9,19.633 16.15,18.9C17.4,18.167 18.383,17.158 19.1,15.875C17.667,15.742 16.308,15.383 15.025,14.8C13.742,14.2 12.592,13.392 11.575,12.375C10.558,11.358 9.75,10.208 9.15,8.925C8.55,7.642 8.192,6.283 8.075,4.85C6.792,5.567 5.783,6.558 5.05,7.825C4.333,9.075 3.975,10.433 3.975,11.9C3.975,14.15 4.758,16.067 6.325,17.65C7.908,19.217 9.825,20 12.075,20ZM18,10L16.75,7.25L14,6L16.75,4.75L18,2L19.25,4.75L22,6L19.25,7.25L18,10Z"
+        android:fillColor="@android:color/white"/>
+  </group>
 </vector>
