--- a/apk/res/layout/widget_date_navigation_with_spinner.xml
+++ b/apk/res/layout/widget_date_navigation_with_spinner.xml
@@ -73,6 +73,7 @@
         <TextView
             android:id="@+id/disabled_spinner"
             style="?attr/disabledSpinner"
+            android:importantForAccessibility="no"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
