--- a/apk/res/layout/fragment_entries.xml
+++ b/apk/res/layout/fragment_entries.xml
@@ -43,7 +43,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/no_data"
-        android:visibility="gone" />
+        android:visibility="gone"
+        android:focusable="true"/>
 
     <TextView
         android:id="@+id/error_view"
