--- a/apk/res/navigation/data_nav_graph_new_ia.xml
+++ b/apk/res/navigation/data_nav_graph_new_ia.xml
@@ -26,30 +26,7 @@
     <include app:graph="@navigation/combined_permissions_nav_graph"/>
     <include app:graph="@navigation/connected_apps_nav_graph"/>
     <include app:graph="@navigation/data_sources_nav_graph"/>
-
-    <fragment
-        android:id="@+id/appDataFragment"
-        android:label="@string/app_data_title"
-        android:name="com.android.healthconnect.controller.data.appdata.AppDataFragment">
-        <argument
-            android:name="android.intent.extra.PACKAGE_NAME"
-            app:argType="string" />
-        <action
-            android:id="@+id/action_appData_to_appEntries"
-            app:destination="@id/appEntriesFragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/appEntriesFragment"
-        android:label="@string/app_data_title"
-        android:name="com.android.healthconnect.controller.data.entries.AppEntriesFragment">
-        <argument
-            android:name="android.intent.extra.PACKAGE_NAME"
-            app:argType="string" />
-        <action
-            android:id="@+id/action_appEntriesFragment_to_dataEntryDetailsFragment"
-            app:destination="@id/dataEntryDetailsFragment" />
-    </fragment>
+    <include app:graph="@navigation/entries_and_access_nav_graph"/>
 
     <fragment
         android:id="@+id/allDataFragment"
@@ -57,49 +34,13 @@
         android:name="com.android.healthconnect.controller.data.alldata.AllDataFragment">
         <action
             android:id="@+id/action_allData_to_entriesAndAccess"
-            app:destination="@id/entriesAndAccessFragment" />
-        <action
-            android:id="@+id/action_allDataFragment_to_unitFragment"
-            app:destination="@id/unitFragment" />
+            app:destination="@id/entries_and_access_nav_graph" />
         <action
             android:id="@+id/action_allDataFragment_to_dataSourcesFragment"
             app:destination="@id/data_sources_nav_graph"/>
-
-    </fragment>
-
-    <fragment
-        android:id="@+id/entriesAndAccessFragment"
-        android:label="@string/data_title"
-        android:name="com.android.healthconnect.controller.data.entriesandaccess.EntriesAndAccessFragment">
         <action
-            android:id="@+id/action_entriesAndAccessFragment_to_dataEntryDetailsFragment"
-            app:destination="@id/dataEntryDetailsFragment" />
-        <action
-            android:id="@+id/action_entriesAndAccessFragment_to_fitnessApp"
-            app:destination="@id/fitness_app_nav_graph" />
-        <action
-            android:id="@+id/action_entriesAndAccessFragment_to_medicalApp"
-            app:destination="@id/medical_app_nav_graph" />
-        <action
-            android:id="@+id/action_entriesAndAccessFragment_to_combinedPermissions"
-            app:destination="@id/combined_permissions_nav_graph" />
-        <action
-            android:id="@+id/action_entriesAndAccessFragment_to_unitFragment"
-            app:destination="@id/unitFragment" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/unitFragment"
-        android:name="com.android.healthconnect.controller.dataentries.units.UnitsFragment"
-        android:label="@string/units_title" />
-
-    <fragment
-        android:id="@+id/dataEntryDetailsFragment"
-        android:name="com.android.healthconnect.controller.entrydetails.DataEntryDetailsFragment"
-        android:label="@string/entry_details_title" >
-        <action
-            android:id="@+id/action_dataEntryDetailsFragment_to_unitFragment"
-            app:destination="@id/unitFragment" />
+            android:id="@+id/action_allDataFragment_to_connectedApps"
+            app:destination="@id/connected_apps_nav_graph" />
     </fragment>
 
 </navigation>
