Align radio buttons with the subtitle in Auto-delete screen
Screenshot of auto delete screen in english: https://screenshot.googleplex.com/7HookHVvArXcvqD.png
Screenshot of auto delete screen in arabic: https://screenshot.googleplex.com/5atE3Jd6kDK5d2J.png
Screenshot of auto delete screen before change in english: https://screenshot.googleplex.com/3P5e9f5AK8TKMS2.png
Screenshot of auto delete screen before change in arabic: https://screenshot.googleplex.com/AB3pVfk24fKUkhV.png

Fixes: 376495784
Flag: NONE bug fix
Test: None
Change-Id: I8b2693ff799d14cb8985b6c5b211e6158fab452b

--- a/apk/res/layout/widget_auto_delete_range_picker.xml
+++ b/apk/res/layout/widget_auto_delete_range_picker.xml
@@ -23,7 +23,7 @@
         android:id="@+id/radio_group_time_range"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+        android:paddingStart="0dp"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:checkedButton="@+id/radio_button_never">
         <RadioButton
