--- a/apk/res/layout/widget_app_source_layout.xml
+++ b/apk/res/layout/widget_app_source_layout.xml
@@ -76,6 +76,8 @@
         android:layout_height="match_parent"
         android:layout_weight="0.32"
         android:minWidth="@dimen/button_size"
+        android:paddingStart="0dp"
+        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:layout_gravity="center_vertical">
 
         <ImageView
