Match checkbox text color to the other text in the dialog
Screenshot: https://screenshot.googleplex.com/8RDUvr8uqJzb3rc.png

Fixes: 376493924
Flag: NONE bug fix
Test: None
Change-Id: Ic65d9fd4fc20ba6aa5f3424857dcc880f1fdd8ed

--- a/apk/res/layout/dialog_message_with_checkbox.xml
+++ b/apk/res/layout/dialog_message_with_checkbox.xml
@@ -54,6 +54,8 @@
 
         <CheckBox
             android:id="@+id/dialog_checkbox"
+            android:textAppearance="?attr/textAppearanceSummary"
+            android:textColor="@color/settingslib_text_color_secondary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="false" />
