--- a/apk/res/layout/dialog_message_with_checkbox.xml
+++ b/apk/res/layout/dialog_message_with_checkbox.xml
@@ -56,6 +56,8 @@
             android:id="@+id/dialog_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="false" />
+            android:checked="false"
+            android:paddingHorizontal="@dimen/spacing_normal"
+            android:layout_gravity="start"/>
     </LinearLayout>
 </ScrollView>
