--- a/apk/res/layout/dialog_custom_layout.xml
+++ b/apk/res/layout/dialog_custom_layout.xml
@@ -49,6 +49,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="@dimen/spacing_normal"
+            android:layout_marginBottom="@dimen/spacing_xlarge"
             android:textDirection="locale"
             style="?attr/textAppearanceSummary" />
 
