--- a/apk/res/layout/dialog_message_with_checkbox.xml
+++ b/apk/res/layout/dialog_message_with_checkbox.xml
@@ -58,8 +58,9 @@
             android:textColor="@color/settingslib_text_color_secondary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/spacing_xlarge"
             android:checked="false"
             android:paddingHorizontal="@dimen/spacing_normal"
-            android:layout_gravity="start"/>
+            android:layout_gravity="start" />
     </LinearLayout>
 </ScrollView>
