Decrease left padding of date navigation spinner in entries screen
Screenshot: https://screenshot.googleplex.com/AvFhoVguobhUkVM.png
Screenshot before change: https://screenshot.googleplex.com/65d3CFLweyR8FMv.png

Fixes: 376478025
Flag: NONE bug fix
Test: None
Change-Id: I9f16821d53ffba82618359ed0c1c127f14ef40e4

--- a/apk/res/layout/widget_date_navigation_with_spinner.xml
+++ b/apk/res/layout/widget_date_navigation_with_spinner.xml
@@ -83,7 +83,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:paddingStart="32dp"
+            android:paddingStart="@dimen/spacing_large"
             android:paddingEnd="40dp"
             android:textAlignment="center" />
     </androidx.constraintlayout.widget.ConstraintLayout>
