--- a/apk/res/values/styles.xml
+++ b/apk/res/values/styles.xml
@@ -235,7 +235,7 @@
         <item name="android:background">@drawable/settingslib_spinner_background</item>
         <item name="android:popupBackground">@drawable/settingslib_spinner_dropdown_background
         </item>
-        <item name="android:paddingStart">@dimen/spacing_normal</item>
+        <item name="android:paddingStart">@dimen/spacing_small</item>
         <item name="android:paddingEnd">@dimen/spacing_xlarge</item>
         <item name="android:textColor">@color/settingslib_spinner_title_color</item>
         <item name="android:textAppearance">?attr/textAppearanceLabel</item>
