Adjust padding on tab buttons in entries screen
Screenshot of entries screen: https://screenshot.googleplex.com/ANc9kuF3d6gr23C.png
Screenshot of entries screen when tabs are disabled: https://screenshot.googleplex.com/8RqVp8KvHYBTN9o.png

Fixes: 376478021
Flag: NONE bug fix
Test: None
Change-Id: I0e72daec3d1e5555c5fbc1f92ce227d2dc7fd87a

--- a/apk/res/values/dimens.xml
+++ b/apk/res/values/dimens.xml
@@ -49,5 +49,6 @@
     <dimen name="recent_access_fab_bottom_padding">90dp</dimen>
 
     <dimen name="tab_corner_radius">12dp</dimen>
+    <dimen name="tab_width">110dp</dimen>
 
 </resources>
