--- a/apk/res/layout/fragment_entries_access.xml
+++ b/apk/res/layout/fragment_entries_access.xml
@@ -36,10 +36,12 @@
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMaxWidth="0dp"
-            app:tabGravity="fill"
+            android:minHeight="?actionBarSize"
+            app:tabMinWidth="@dimen/tab_width"
+            app:tabGravity="center"
             app:tabMode="fixed"
             app:tabIndicatorHeight="0dp"
+            app:tabIndicatorFullWidth="true"
             app:tabSelectedTextColor="@color/settingslib_primary_dark_device_default_settings"
             app:tabTextColor="?android:attr/textColorSecondary"
             app:tabBackground="@drawable/tab_background"
@@ -51,10 +53,12 @@
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMaxWidth="0dp"
-            app:tabGravity="fill"
+            android:minHeight="?actionBarSize"
+            app:tabMinWidth="@dimen/tab_width"
+            app:tabGravity="center"
             app:tabMode="fixed"
             app:tabIndicatorHeight="0dp"
+            app:tabIndicatorFullWidth="true"
             app:tabSelectedTextColor="@color/settingslib_primary_dark_device_default_settings"
             app:tabTextColor="?android:attr/textColorSecondary"
             app:tabBackground="@drawable/tab_background_disabled"
