--- a/apk/res/drawable/ic_delete_forever.xml
+++ b/apk/res/drawable/ic_delete_forever.xml
@@ -19,8 +19,8 @@
     android:height="24dp"
     android:viewportWidth="24.0"
     android:viewportHeight="24.0"
-    android:tint="?attr/colorControlNormal">
+    android:tint="?android:attr/colorControlNormal">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="#FFFFFFFF"
         android:pathData="M15,4L15,3L9,3v1L4,4v2h1v13c0,1.1 0.9,2 2,2h10c1.1,0 2,-0.9 2,-2L19,6h1L20,4h-5zM17,19L7,19L7,6h10v13zM9.41,16.5L12,13.91l2.59,2.59L16,15.09l-2.59,-2.59L16,9.91 14.59,8.5 12,11.09 9.41,8.5 8,9.91l2.59,2.59L8,15.09z"/>
 </vector>
