Make the dropdown menu under the button instead of on top
Screenshot: https://screenshot.googleplex.com/9fA6DNqMBdiG5Ck.png

Fixes: 376478829
Flag: NONE bug fix
Test: None
Change-Id: I9c587ce5da3a909ba5020ea883c4652a64743b43

--- a/apk/res/values/styles.xml
+++ b/apk/res/values/styles.xml
@@ -239,6 +239,7 @@
         <item name="android:paddingEnd">@dimen/spacing_xlarge</item>
         <item name="android:textColor">@color/settingslib_spinner_title_color</item>
         <item name="android:textAppearance">?attr/textAppearanceLabel</item>
+        <item name="android:dropDownVerticalOffset">@dimen/button_size</item>
     </style>
 
     <style name="Widget.HealthConnect.RadioButton.Chip" parent="@style/Widget.AppCompat.CompoundButton.RadioButton">
