--- a/apk/res/drawable/ic_medical_lab_results.xml
+++ b/apk/res/drawable/ic_medical_lab_results.xml
@@ -1,10 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="14dp"
-    android:height="20dp"
-    android:viewportWidth="14"
-    android:viewportHeight="20"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
     android:tint="?attr/colorControlNormal">
-<path
-      android:pathData="M7,20C5.617,20 4.433,19.517 3.45,18.55C2.483,17.567 2,16.383 2,15V6C1.45,6 0.975,5.808 0.575,5.425C0.192,5.025 0,4.55 0,4V2C0,1.45 0.192,0.983 0.575,0.6C0.975,0.2 1.45,-0 2,-0H12C12.55,-0 13.017,0.2 13.4,0.6C13.8,0.983 14,1.45 14,2V4C14,4.55 13.8,5.025 13.4,5.425C13.017,5.808 12.55,6 12,6V15C12,16.383 11.508,17.567 10.525,18.55C9.558,19.517 8.383,20 7,20ZM2,4H12V2H2V4ZM7,18C7.833,18 8.542,17.708 9.125,17.125C9.708,16.542 10,15.833 10,15H7V13H10V11H7V9H10V6H4V15C4,15.833 4.292,16.542 4.875,17.125C5.458,17.708 6.167,18 7,18ZM2,4V2V4Z"
-      android:fillColor="@android:color/white"/>
+    <group>
+        <clip-path
+            android:pathData="M0,0h24v24h-24z"/>
+        <path
+            android:pathData="M12,22C10.617,22 9.433,21.517 8.45,20.55C7.483,19.567 7,18.383 7,17V8C6.45,8 5.975,7.808 5.575,7.425C5.192,7.025 5,6.55 5,6V4C5,3.45 5.192,2.983 5.575,2.6C5.975,2.2 6.45,2 7,2H17C17.55,2 18.017,2.2 18.4,2.6C18.8,2.983 19,3.45 19,4V6C19,6.55 18.8,7.025 18.4,7.425C18.017,7.808 17.55,8 17,8V17C17,18.383 16.508,19.567 15.525,20.55C14.558,21.517 13.383,22 12,22ZM7,6H17V4H7V6ZM12,20C12.833,20 13.542,19.708 14.125,19.125C14.708,18.542 15,17.833 15,17H12V15H15V13H12V11H15V8H9V17C9,17.833 9.292,18.542 9.875,19.125C10.458,19.708 11.167,20 12,20ZM7,6V4V6Z"
+            android:fillColor="@android:color/white"/>
+    </group>
 </vector>
