--- a/apk/res/drawable/ic_medical_past_visits.xml
+++ b/apk/res/drawable/ic_medical_past_visits.xml
@@ -1,10 +1,14 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="16dp"
-    android:height="18dp"
-    android:viewportWidth="16"
-    android:viewportHeight="18"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24"
     android:tint="?attr/colorControlNormal">
-  <path
-      android:pathData="M6.5,14H9.5V11.5H12V8.5H9.5V6H6.5V8.5H4V11.5H6.5V14ZM0,18V6L8,-0L16,6V18H0ZM2,16H14V7L8,2.5L2,7V16Z"
-      android:fillColor="@android:color/white"/>
+  <group>
+    <clip-path
+        android:pathData="M0,0h24v24h-24z"/>
+    <path
+        android:pathData="M10.5,17H13.5V14.5H16V11.5H13.5V9H10.5V11.5H8V14.5H10.5V17ZM4,21V9L12,3L20,9V21H4ZM6,19H18V10L12,5.5L6,10V19Z"
+        android:fillColor="@android:color/white"/>
+  </group>
 </vector>
