--- a/apk/res/drawable/ic_medical_patient_info.xml
+++ b/apk/res/drawable/ic_medical_patient_info.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="16dp"
-    android:height="16dp"
-    android:viewportWidth="16"
-    android:viewportHeight="16"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24.0"
+    android:viewportHeight="24.0"
     android:tint="?attr/colorControlNormal">
-<path
-      android:pathData="M8 8c-1.1 0-2-.4-2.8-1.2A3.9 3.9 0 0 1 4 4c0-1.1.4-2 1.2-2.8C6 .4 6.9 0 8 0c1.1 0 2 .4 2.8 1.2C11.6 2 12 2.9 12 4c0 1.1-.4 2-1.2 2.8C10 7.6 9.1 8 8 8Zm-8 8v-2.8a3 3 0 0 1 1.6-2.6 14.4 14.4 0 0 1 12.8 0c.5.2.9.6 1.2 1 .3.5.4 1 .4 1.6V16H0Zm2-2h12v-.8c0-.2 0-.3-.2-.5l-.3-.3A12.5 12.5 0 0 0 8 11a12.5 12.5 0 0 0-5.5 1.3 1 1 0 0 0-.4.4l-.1.5v.8Zm6-8c.6 0 1-.2 1.4-.6.4-.4.6-.9.6-1.4 0-.5-.2-1-.6-1.4C9 2.2 8.6 2 8 2a2 2 0 0 0-1.4.6A2 2 0 0 0 6 4c0 .5.2 1 .6 1.4.4.4.9.6 1.4.6Z"
-      android:fillColor="@android:color/white"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M12,6c1.1,0 2,0.9 2,2s-0.9,2 -2,2s-2,-0.9 -2,-2S10.9,6 12,6M12,15c2.7,0 5.8,1.29 6,2v1H6l0,-0.99C6.2,16.29 9.3,15 12,15M12,4C9.79,4 8,5.79 8,8s1.79,4 4,4s4,-1.79 4,-4S14.21,4 12,4L12,4zM12,13c-2.67,0 -8,1.34 -8,4v3h16v-3C20,14.34 14.67,13 12,13L12,13z"/>
 </vector>
