--- a/apk/res/xml/all_data_screen.xml
+++ b/apk/res/xml/all_data_screen.xml
@@ -16,6 +16,10 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.android.settingslib.widget.TopIntroPreference
+        android:key="key_top_intro"
+        android:title="@string/browse_health_records_intro"
+        app:isPreferenceVisible="false"/>
     <com.android.healthconnect.controller.selectabledeletion.SelectAllCheckboxPreference
         android:order="0"
         android:key="key_select_all"
