--- a/apk/res/drawable/ic_medical_social_history.xml
+++ b/apk/res/drawable/ic_medical_social_history.xml
@@ -1,14 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
+    android:width="18dp"
+    android:height="20dp"
+    android:viewportWidth="18"
+    android:viewportHeight="20"
     android:tint="?attr/colorControlNormal">
-  <group>
-    <clip-path
-        android:pathData="M0,0h24v24h-24z"/>
-    <path
-        android:pathData="M8,21V19H11V14.9C9.567,14.667 8.375,14 7.425,12.9C6.475,11.8 6,10.5 6,9V3H18V9C18,10.5 17.525,11.8 16.575,12.9C15.625,14 14.433,14.667 13,14.9V19H16V21H8ZM12,13C12.933,13 13.75,12.717 14.45,12.15C15.15,11.583 15.617,10.867 15.85,10H8.15C8.383,10.867 8.85,11.583 9.55,12.15C10.25,12.717 11.067,13 12,13ZM8,8H16V5H8V8Z"
-        android:fillColor="@android:color/white"/>
-  </group>
+  <path
+      android:pathData="M3,20C2.167,20 1.458,19.708 0.875,19.125C0.292,18.542 0,17.833 0,17V14H3V-0H18V17C18,17.833 17.708,18.542 17.125,19.125C16.542,19.708 15.833,20 15,20H3ZM15,18C15.283,18 15.517,17.908 15.7,17.725C15.9,17.525 16,17.283 16,17V2H5V14H14V17C14,17.283 14.092,17.525 14.275,17.725C14.475,17.908 14.717,18 15,18ZM6,7V5H15V7H6ZM6,10V8H15V10H6ZM3,18H12V16H2V17C2,17.283 2.092,17.525 2.275,17.725C2.475,17.908 2.717,18 3,18ZM3,18C2.717,18 2.475,18 2.275,18C2.092,18 2,18 2,18H12H3Z"
+      android:fillColor="@android:color/white"/>
 </vector>
