--- a/apk/res/layout/dialog_custom_layout.xml
+++ b/apk/res/layout/dialog_custom_layout.xml
@@ -53,5 +53,16 @@
             android:textDirection="locale"
             style="?attr/textAppearanceSummary" />
 
+        <CheckBox
+            android:id="@+id/dialog_checkbox"
+            android:visibility="gone"
+            android:textAppearance="?attr/textAppearanceSummary"
+            android:textColor="@color/settingslib_text_color_secondary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/spacing_xlarge"
+            android:checked="false"
+            android:paddingHorizontal="@dimen/spacing_normal"
+            android:layout_gravity="start" />
     </LinearLayout>
 </ScrollView>
