Use TopIntroPreference with lnik to support expressive theming
The padding is too small between the text and the link, raising a bug for the Settings team

Expressive theming on: using TopIntroPreference https://hsv.googleplex.com/4887039932628992
Expressive theming off: using LegacyTopIntroPreference https://hsv.googleplex.com/6498145113473024

Bug: 378469065
Test: manual
Flag: NONE guarded by expressive theming

Change-Id: I57db7207de2e51e2d0233f2bbf635118173d1b87

--- a/apk/res/xml/auto_delete_screen.xml
+++ b/apk/res/xml/auto_delete_screen.xml
@@ -16,13 +16,12 @@
 -->
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory
-        android:key="header">
-    </PreferenceCategory>
-    <PreferenceCategory
         android:key="auto_delete_section"
-        android:title="@string/auto_delete_section">
+        android:title="@string/auto_delete_section"
+        android:order="1">
     </PreferenceCategory>
     <com.android.settingslib.widget.FooterPreference
         android:key="auto_delete_footer"
-        android:title="@string/auto_delete_rationale"/>
+        android:title="@string/auto_delete_rationale"
+        android:order="2"/>
 </PreferenceScreen>
