--- a/apk/res/layout/fragment_empty.xml
+++ b/apk/res/layout/fragment_empty.xml
@@ -16,6 +16,6 @@
 -->
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/deletion_fragment"
+    android:id="@+id/empty_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
