--- a/apk/res/layout/onboarding_screen.xml
+++ b/apk/res/layout/onboarding_screen.xml
@@ -13,58 +13,56 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/onboarding"
+<com.google.android.setupdesign.GlifLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <include
-        layout="@layout/onboarding_screen_content"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+    android:id="@+id/onboarding">
 
     <LinearLayout
+        android:id="@+id/onboarding_content_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/spacing_large"
-        android:layout_marginEnd="@dimen/spacing_large"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+        <ImageView
+            android:id="@+id/onboarding_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:importantForAccessibility="no"
+            android:src="@drawable/ic_onboarding"
+            android:layout_marginBottom="@dimen/spacing_xlarge"
+            android:paddingHorizontal="@dimen/spacing_large"
+            android:scaleType="centerInside" />
 
-            <Button
-                android:id="@+id/go_back_button"
-                android:minHeight="@dimen/button_size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start|center_vertical"
-                android:gravity="center"
-                android:maxLines="2"
-                android:text="@string/onboarding_go_back_button_text"
-                style="@style/Widget.HealthConnect.Button.Borderless" />
-        </FrameLayout>
+        <TextView
+            android:id="@+id/onboarding_description_with_health_connect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:paddingHorizontal="@dimen/spacing_large"
+            android:text="@string/onboarding_description_with_health_connect"
+            android:textAppearance="?attr/textAppearanceLabel"
+            android:textColor="?android:attr/colorAccent"/>
 
-        <FrameLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+        <com.google.android.setupdesign.view.RichTextView
+            android:id="@+id/share_text"
+            android:text="@string/share_data_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="?attr/syncIcon"
+            android:drawablePadding="@dimen/spacing_normal"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            style="@style/SudGlifDescriptionMaterialYou" />
 
-            <Button
-                android:id="@+id/get_started_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minHeight="@dimen/button_size"
-                android:layout_gravity="end|center_vertical"
-                android:text="@string/onboarding_get_started_button_text"
-                style="@style/Widget.HealthConnect.DialogButton.Full" />
-
-        </FrameLayout>
+        <com.google.android.setupdesign.view.RichTextView
+            android:id="@+id/manage_text"
+            android:text="@string/manage_your_settings_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="?attr/manageSettingsIcon"
+            android:drawablePadding="@dimen/spacing_normal"
+            style="@style/SudGlifDescriptionMaterialYou" />
     </LinearLayout>
-</LinearLayout>
+</com.google.android.setupdesign.GlifLayout>
