Ensure raw FHIR json brackets alignment is correct in RTL languages
Bug: 387265595
Test: manual
Flag: NONE bug fix
Change-Id: I03dde62e462874648a5ca6d88a3f59777f2c8815

--- a/apk/res/layout/item_raw_fhir_entry.xml
+++ b/apk/res/layout/item_raw_fhir_entry.xml
@@ -19,7 +19,7 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:gravity="center_vertical"
-    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
+    android:paddingHorizontal="?android:attr/listPreferredItemPaddingStart"
     android:clipToPadding="false">
 
     <TextView
@@ -28,5 +28,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.TopIntroText"
         android:hyphenationFrequency="normalFast"
-        android:lineBreakWordStyle="phrase" />
+        android:lineBreakWordStyle="phrase"
+        android:textDirection="ltr"
+        android:layoutDirection="ltr"/>
 </LinearLayout>
