--- a/apk/res/values-v35/themes.xml
+++ b/apk/res/values-v35/themes.xml
@@ -14,10 +14,7 @@
   limitations under the License.
 -->
 <resources>
-    <!--
-        TODO(b/309578419): Make activities handle insets properly and then remove this.
-    -->
     <style name="Theme.HealthConnect" parent="Base.Theme.HealthConnect">
-        <item name="android:windowOptOutEdgeToEdgeEnforcement">true</item>
+        <!-- TODO (b/376085798) Expressive styles -->
     </style>
 </resources>
