Expressive theming update for the recent access section of the home page.
Testing: added wrapper for theming helper so we can simulate new strings in tests.

Screenshots:
Expressive empty state: https://hsv.googleplex.com/6182644063666176
Expressive non-empty state: https://hsv.googleplex.com/5044558864842752
Legacy empty state: https://hsv.googleplex.com/6665946801373184
Legacy non-empty state: https://hsv.googleplex.com/5540046894530560

Flag: NONE covered by settings
Test: atest && visual
Bug: 378469037
Bug: 365922672
Change-Id: I9c5124e20e334e4d4bbff02698c9544cf854e5fc

--- a/apk/res/values/attrs.xml
+++ b/apk/res/values/attrs.xml
@@ -23,6 +23,7 @@
     <attr name="seeAllIcon" format="reference"/>
     <attr name="recentAccessTimelineDividerDrawable" format="reference" />
     <attr name="manageDataIcon" format="reference"/>
+    <attr name="optionsIcon" format="reference"/>
 
     <!-- App permissions page -->
     <attr name="removeAccessForAllAppsIcon" format="reference"/>
