--- a/apk/res/values/themes.xml
+++ b/apk/res/values/themes.xml
@@ -25,6 +25,7 @@
         <item name="seeAllIcon">@drawable/ic_right_arrow</item>
         <item name="recentAccessTimelineDividerDrawable">@drawable/ic_timeline_divider</item>
         <item name="manageDataIcon">@drawable/ic_build</item>
+        <item name="optionsIcon">@drawable/options_icon</item>
 
         <!-- App permissions page-->
         <item name="removeAccessForAllAppsIcon">@drawable/ic_remove_access_for_all_apps</item>
