Use LongSummaryPreferenceCategory for inactive apps in Access
Expressive theming on: https://hsv.googleplex.com/6297564168060928
Expressive theming off: https://hsv.googleplex.com/4842787030695936

Previously expressive theming on: https://hsv.googleplex.com/6250161914249216

Fix: 378467817
Flag: NONE settings theme handling
Test: manual visual
Change-Id: Iec0b00396ac386a8525282ca7dae5c331c410c90

--- a/apk/res/xml/access_screen.xml
+++ b/apk/res/xml/access_screen.xml
@@ -25,8 +25,8 @@
     <PreferenceCategory
         android:key="can_write">
     </PreferenceCategory>
-    <PreferenceCategory
+    <com.android.healthconnect.controller.shared.LongSummaryPreferenceCategory
         android:key="inactive"
         android:title="@string/inactive_apps">
-    </PreferenceCategory>
+    </com.android.healthconnect.controller.shared.LongSummaryPreferenceCategory>
 </PreferenceScreen>
